...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/entrant_profile_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrant_profile_picture">

        <TextView
            android:id="@+id/entrant_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sample name"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/entrant_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sample email"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/entrant_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="780-xxx-xxxx"
            android:textAlignment="center" />

    </LinearLayout>
...
